syntax = "proto3";
package types;

import "google/protobuf/struct.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";

option go_package = "pkg/types";

service FormService {
  rpc PostForm(PostFormRequest) returns (PostFormResponse) {
    option (google.api.http) = {
      post: "/v1/forms"
      body: "*"
    };
  }

  rpc PostFormVersion(PostFormVersionRequest) returns (PostFormVersionResponse) {
    option (google.api.http) = {
      post: "/v1/forms/{formId}/versions"
      body: "*"
    };
  }

  rpc PatchForm(PatchFormRequest) returns (PatchFormResponse) {
    option (google.api.http) = {
      patch: "/v1/forms/{id}"
    };
  }

  rpc GetForms(GetFormsRequest) returns (GetFormsResponse) {
    option (google.api.http) = {
      get: "/v1/forms"
    };
  }

  rpc GetFormById(GetFormByIdRequest) returns (GetFormByIdResponse) {
    option (google.api.http) = {
      get: "/v1/forms/{id}"
    };
  }

  rpc DeleteForm(DeleteFormRequest) returns (DeleteFormResponse) {
    option (google.api.http) = {
      delete: "/v1/forms/{id}"
    };
  }

  rpc DisableForm(DisableFormRequest) returns (DisableFormResponse) {
    option (google.api.http) = {
      patch: "/v1/forms/{id}/disable"
    };
  }
}

message IProtoFormVersionSubmission {
  string id = 1;
  string formVersionId = 2;
  string submission = 3 [(google.api.field_behavior) = REQUIRED];
}

message IProtoFormVersion {
  string id = 1;
  string formId = 2;
  string form = 3 [(google.api.field_behavior) = REQUIRED];
  string submission = 4 [(google.api.field_behavior) = REQUIRED];
  string createdOn = 5;
}

message IProtoForm {
  string id = 1;
  string name = 2;
  IProtoFormVersion version = 3 [(google.api.field_behavior) = REQUIRED];
  string createdOn = 4;
}

message PostFormRequest {
  IProtoForm form = 1 [(google.api.field_behavior) = REQUIRED];
}

message PostFormResponse {
  string id = 1 [(google.api.field_behavior) = REQUIRED];
}

message PostFormVersionRequest {
  IProtoFormVersion version = 1 [(google.api.field_behavior) = REQUIRED];
  string name = 2 [(google.api.field_behavior) = REQUIRED];
}

message PostFormVersionResponse {
  string id = 1 [(google.api.field_behavior) = REQUIRED];
}

message PatchFormRequest {
  IProtoForm form = 1 [(google.api.field_behavior) = REQUIRED];
}

message PatchFormResponse {
  bool success = 1 [(google.api.field_behavior) = REQUIRED];
}

message GetFormsRequest {}

message GetFormsResponse {
  repeated IProtoForm forms = 1 [(google.api.field_behavior) = REQUIRED];
}

message GetFormByIdRequest {
  string id = 1 [(google.api.field_behavior) = REQUIRED];
}

message GetFormByIdResponse {
  IProtoForm form = 1 [(google.api.field_behavior) = REQUIRED];
}

message DeleteFormRequest {
  string id = 1 [(google.api.field_behavior) = REQUIRED];
}

message DeleteFormResponse {
  bool success = 1 [(google.api.field_behavior) = REQUIRED];
}

message DisableFormRequest {
  string id = 1 [(google.api.field_behavior) = REQUIRED];
}

message DisableFormResponse {
  bool success = 1 [(google.api.field_behavior) = REQUIRED];
}
